added header blog and list

--- a/third repo.html
+++ b/third repo.html
@@ -7,7 +7,36 @@
 
 </head>
 <body>
-    
+    <header class="header">
+        <h2>Welcome to my website</h2>
+    </header>
+   
+    <div class="blog">
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam impedit cum ea dignissimos expedita quaerat mollitia dolorum voluptates non odit laboriosam aperiam autem nesciunt maiores unde tempora harum esse provident consequuntur assumenda, quis sequi aspernatur dolores! Libero harum adipisci nihil delectus dicta, at ullam earum, quae modi officia saepe accusamus? Quia rem, delectus tenetur velit distinctio ducimus ea dignissimos quo?</p>
+    </div>
+    <div class="blog">
+        <h3>My Second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam impedit cum ea dignissimos expedita quaerat mollitia dolorum voluptates non odit laboriosam aperiam autem nesciunt maiores unde tempora harum esse provident consequuntur assumenda, quis sequi aspernatur dolores! Libero harum adipisci nihil delectus dicta, at ullam earum, quae modi officia saepe accusamus? Quia rem, delectus tenetur velit distinctio ducimus ea dignissimos quo?</p>
+    </div>
+    <div class="blog">
+        <h3>My Third blog</h3>
+        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Ipsam impedit cum ea dignissimos expedita quaerat mollitia dolorum voluptates non odit laboriosam aperiam autem nesciunt maiores unde tempora harum esse provident consequuntur assumenda, quis sequi aspernatur dolores! Libero harum adipisci nihil delectus dicta, at ullam earum, quae modi officia saepe accusamus? Quia rem, delectus tenetur velit distinctio ducimus ea dignissimos quo?</p>
+    </div>
+    <ul>
+        <li>First</li>
+        <li>Second</li>
+    </ul>
+    <ol>
+        <li>inline css</li>
+        <li>embaded/internal css</li>
+        <li>external css</li>
+    </ol>
+    <ul>
+        <li>First</li>
+        <li>Second</li>
+        <li>Third</li>
+    </ul> 
      
 </body>
 </html>
